# clienter

./: Cargo.toml  README.md
.github/workflows/: dry-publish.yml  publish.yml
src/: lib.rs  main.rs  utils.rs
src/core/: client.rs  error.rs  method.rs  mod.rs  protocol.rs  response.rs
src/handlers/: http.rs  mod.rs  secure.rs
src/http/: client.rs  headers.rs  method.rs  mod.rs  protocol.rs  request.rs  response.rs  status_code.rs  uri.rs
src/internal/: mod.rs  stream_buffer.rs
tests/: simple.rs
